# mc_go1_description

./: CMakeLists.txt  README.md  package.xml
convex/aliengo/: calf-ch.txt  hip-ch.txt  thigh-ch.txt  thigh_mirror-ch.txt  trunk-ch.txt
convex/go1/: FL_hip-ch.txt  RR_calf-ch.txt  RR_thigh-ch.txt  calf-ch.txt  depthCamera-ch.txt  hip-ch.txt  thigh-ch.txt  thigh_mirror-ch.txt  trunk-ch.txt  ultraSound-ch.txt
launch/: display_aliengo.launch  display_go1.launch
rsdf/aliengo/: FL_foot.rsdf  FR_foot.rsdf  RL_foot.rsdf  RR_foot.rsdf
rsdf/go1/: FL_foot.rsdf  FR_foot.rsdf  RL_foot.rsdf  RR_foot.rsdf
scripts/: generate_convex.sh  generate_urdf.py
scripts/tool/: make.sh  scaling_xyz  scaling_xyz.cpp
urdf/: go1.urdf
